# weather_sys/backend/routes/dashboard_routes.py
@@ -3,7 +3,7 @@
 from flask import Blueprint
 
 from ..services import dashboard_service
-from ..utils.query_params import date_param, weather_location_params
+from ..utils.query_params import date_param, name_param, weather_location_params
 from ..utils.response import error_response, success_response
 
 
@@ -19,4 +19,16 @@ def dashboard_overview():
     data = dashboard_service.get_dashboard_overview(**location)
     if data is None:
         return error_response("dashboard location data not found", http_status=404)
+    return success_response(data=data)
+
+
+@dashboard_bp.get("/province-overview")
+def province_dashboard_overview():
+    province = name_param("province", required=True)
+    selected_date = date_param()
+    data = dashboard_service.get_province_dashboard_overview(
+        province=province, date=selected_date
+    )
+    if data is None:
+        return error_response("province dashboard data not found", http_status=404)
     return success_response(data=data)
