# weather_sys/font/weather_font/src/api/weather.js
@@ -8,8 +8,16 @@ export function getWeatherDates(params) {
   return request.get('/weather/dates', { params })
 }
 
+export function getProvinceWeatherDates(params) {
+  return request.get('/weather/province-dates', { params })
+}
+
 export function getWeatherTrend(params) {
   return request.get('/weather/trend', { params })
+}
+
+export function getProvinceWeatherTrend(params) {
+  return request.get('/weather/province-trend', { params })
 }
 
 export function getCityWeatherComparison(params) {
